Apiv2 adjustments done; added avg response time

--- a/template.slim
+++ b/template.slim
@@ -33,6 +33,11 @@ html lang='de'
 
 
               .secondary-content
+                div
+                  small.chip
+                    = check.avg_response_time
+                    |s
+                  small< Avg. time
                 - check.uptimes.each do |text,uptime|
                   div
                     .chip class=label_class_for_uptime(uptime)
